WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14971
REGRESSION: cannot select reporter's e-mail in bugzilla
https://bugs.webkit.org/show_bug.cgi?id=14971
Summary
REGRESSION: cannot select reporter's e-mail in bugzilla
Alexey Proskuryakov
Reported
2007-08-15 05:48:16 PDT
Try drag-selecting reporter name and e-mail in this Bugzilla report. It's possible (though tricky) in shipping Safari/WebKit, but I couldn't do it with
r25065
nightly at all. See also:
bug 14546
.
Attachments
Screenshot of selection
(8.53 KB, image/png)
2007-08-15 06:24 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
patch
(4.85 KB, patch)
2007-08-15 13:55 PDT
,
Justin Garcia
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2007-08-15 06:24:32 PDT
Created
attachment 15976
[details]
Screenshot of selection Select the email address like this? I started from the end (">") and dragged left and up. Used a local debug build of WebKit
r25066
with Safari 3 Public Beta v. 3.0.3 (522.12.1) on Mac OS X 10.4.10 (8R218).
mitz
Comment 2
2007-08-15 07:37:38 PDT
I think <
http://trac.webkit.org/projects/webkit/changeset/25057
> made it impossible to drag-select inside -webkit-user-select: ignore elements, not only start the selection in them.
Alexey Proskuryakov
Comment 3
2007-08-15 09:57:09 PDT
(In reply to
comment #1
)
> Select the email address like this?
Yes, trying harder, I can select... But it is way easier in shipping Safari/WebKit.
Justin Garcia
Comment 4
2007-08-15 13:55:59 PDT
Created
attachment 15987
[details]
patch
Justin Garcia
Comment 5
2007-08-15 13:56:35 PDT
(In reply to
comment #2
)
> I think <
http://trac.webkit.org/projects/webkit/changeset/25057
> made it > impossible to drag-select inside -webkit-user-select: ignore elements, not only > start the selection in them.
Exactly.
Darin Adler
Comment 6
2007-08-15 14:01:20 PDT
Comment on
attachment 15987
[details]
patch r=me
Justin Garcia
Comment 7
2007-08-15 14:35:04 PDT
r25101
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug