LayoutTests:

Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=14971
        REGRESSION: cannot select reporter's e-mail in bugzilla

        * editing/selection/14971-expected.checksum: Added.
        * editing/selection/14971-expected.png: Added.
        * editing/selection/14971-expected.txt: Added.
        * editing/selection/14971.html: Added.

WebCore:

        Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=14971
        REGRESSION: cannot select reporter's e-mail in bugzilla

        * page/EventHandler.cpp:
        (WebCore::EventHandler::canMouseDragExtendSelect): Allow drag-selecting inside
        a -webkit-user-select:ignore region.



Canonical link: https://commits.webkit.org/19623@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25101 268f45cc-cd09-0410-ab3c-d52691b4dbfc